[package]
name = "playground"
version = "0.1.0"
authors = ["Josh Palmer <jpalmerwatkins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
itertools = "0.9.0"
playground_macros = { path = "../playground_macros" }
store = { path = "P:/Personal/Rust/store/store" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false