[package]
name = "playground"
version = "0.1.0"
authors = ["Josh Palmer <jpalmerwatkins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
itertools = "0.10.0"
lazy_static = "1.4.0"
downcast-rs = "1.2.0"
async-std = { version = "1.9.0", features = ["attributes"] }
futures = "0.3.14"
async-trait = "0.1.50"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false